# G4_Proyecto2_SO

./: .Module.symvers.cmd  .driver.ko.cmd  .driver.mod.cmd  .driver.mod.o.cmd  .driver.o.cmd  .modules.order.cmd  .test_driver.ko.cmd  .test_driver.mod.cmd  .test_driver.mod.o.cmd  .test_driver.o.cmd  Makefile  com.sh  driver.c  driver.h  driver.ko  driver.mod.c  driver_lib.c  driver_lib.h  modules.order  prueba  prueba.c  test_driver.c  test_driver.h  test_driver.ko  test_driver.mod  test_driver.mod.c  test_driver_ID.h
ClientTCP/: CMakeLists.txt  Makefile  client.c  client.h  clientCLI.c  clientCLI.h  clientTCP  el-quijote.txt  encrypt10.txt  encrypt13.txt  encrypt15.txt  encrypt16.txt  encrypt2.txt  encrypt3.txt  encrypt5.txt  main.c
ServerTCP/: CMakeLists.txt  Makefile  ServerTCP  driver_lib.c  driver_lib.h  main.c  serverInit.c  serverInit.h  serverTCP
arduino/proyecto/: proyecto.ino
sharedfolder/: Makefile  decrypted1.txt  decrypted10.txt  decrypted11.txt  decrypted12.txt  decrypted13.txt  decrypted14.txt  decrypted15.txt  decrypted16.txt  decrypted2.txt  decrypted3.txt  decrypted4.txt  decrypted5.txt  decrypted6.txt  decrypted7.txt  decrypted8.txt  decrypted9.txt  encrypt1.txt  encrypt11.txt  encrypt12.txt  encrypt14.txt  encrypt4.txt  encrypt6.txt  encrypt7.txt  encrypt8.txt  encrypt9.txt  hostfile0  hostfile1  hostfile2  hostfile3  mount_shared.sh  slaveExecutable  slaveExecutable.c
